# EyaKV

./: .gitignore  CMakeLists.txt  DEVELOPMENT_PLAN.md  RAFT_DESIGN.md  RAFT_IMPLEMENTATION.md  RAFT_QUICKSTART.md  README.md  eyakv_stress_connections_report.md  eyakv_stress_report.md  eyakv_stress_report_linux.md  node_0_conn.txt  node_0_filtered.txt  node_0_last.txt  node_0_log.txt  node_1_last.txt  node_2_context.txt  node_2_last.txt  pipeline_batch_optimization_plan.md  stress_runner.py  stress_test_usage.md  test_connection_limit.sh  test_raft_output.txt  tinykv_stress_report_20260206_151402.md  tinykv_stress_report_20260206_155742.md
.github/workflows/: ci.yml
apps/client/: CMakeLists.txt  main.cpp  stress_test.cpp  test_client.cpp
apps/server/: CMakeLists.txt  main.cpp
docs/: performance_improvement.md
include/common/: bloom_filter.h  common.h  export.h  operation_type.h  path_utils.h  serializer.h  skip_list.h  threadpool.h  utils.h  zset.h
include/common/base/: export.h
include/common/concurrency/: threadpool.h
include/common/ds/: bloom_filter.h  lru_cache.h  skip_list.h  zset.h
include/common/serialization/: serializer.h
include/common/socket/: socket.h
include/common/socket/cs/: client.h  common.h  server.h
include/common/socket/protocol/: protocol.h
include/common/types/: operation_type.h  value.h
include/common/util/: checksum_utils.h  file_utils.h  ip_utils.h  path_utils.h  string_utils.h  utils.h
include/config/: config.h
include/logger/: logger.h
include/network/: connection.h  server.h  tcp_server.h
include/network/protocol/: protocol.h
include/protocol/: codec.h  protocol.h
include/raft/: raft.h
include/raft/network/: raft_client.h
include/raft/protocol/: protocol.h
include/starter/: starter.h
include/storage/: memtable.h  node.h  sstable.h  storage.h  wal.h
include/storage/processors/: processor.h  structure_processors.h
src/: CMakeLists.txt  CMakeLists_dll_backup.txt  client.cpp  main.cpp
src/common/: bloom_filter.cpp  path_utils.cpp  threadpool.cpp  zset.cpp
src/common/concurrency/: threadpool.cpp
src/common/ds/: bloom_filter.cpp  zset.cpp
src/common/util/: path_utils.cpp
src/logger/: logger.cpp
src/network/: connection.cpp  server.cpp  tcp_server.cpp
src/protocol/: kv_protocol.proto  protocol.cpp
src/raft/: raft.cpp  raft_log_array.cpp
src/starter/: starter.cpp
src/storage/: memtable.cpp  processors.cpp  sstable.cpp  storage.cpp  wal.cpp
tests/: CMakeLists.txt  test_client.cpp  test_memtable.cpp  test_storage.cpp
tests/raft/: test_raft.py
